--- a/src/css/appointmentlist.component.css
+++ b/src/css/appointmentlist.component.css
@@ -1,3 +1,5 @@
-
+.list-content {
+  height: calc(100% - 100px);
+  overflow-y: scroll; }
 
 /*# sourceMappingURL=appointmentlist.component.css.map */
