--- a/src/css/myappointments.component.css
+++ b/src/css/myappointments.component.css
@@ -1,3 +1,15 @@
+.appointments-calendar {
+  position: absolute;
+  bottom: 0;
+  left: 0; }
 
+.appointment-header {
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.appointment-list {
+  padding-top: 100px;
+  height: 100vh; }
 
 /*# sourceMappingURL=myappointments.component.css.map */
