--- a/src/lib/components/appointmentlist/appointmentlist.component.html
+++ b/src/lib/components/appointmentlist/appointmentlist.component.html
@@ -1,6 +1,3 @@
-<div class="row row-center-v row-center h-100 bg-primary">
-  <h4>Mine avtaler</h4>
-</div>
 <div class="row fs-18">
   <div (click)="toggleStatus(0)" class="c-l-4 t-center p-l-20-0 border-blue hover-light"
        [ngClass]="{'border-b-4': checkFilter(0)}">
@@ -18,20 +15,22 @@
     <span>Avslått</span>
   </div>
 </div>
-<div class="row row-center p-l-20-20">
-  <div class="w-1000">
-    <div class="row border-b-1 border-stable p-l-5-10">
-      <h4>August 2016</h4>
-    </div>
-    <div *ngFor="let appointment of filteredAppointments" class="m-l-20-0 center-shadow">
-      <div class="bg-blue p-l-15-15 fs-14" [ngClass]="{
+<div class="list-content">
+  <div class="row row-center p-l-20-20">
+    <div class="w-1000">
+      <div *ngFor="let appointment of filteredAppointments">
+        <div *ngIf="checkMonth(appointment)" class="row border-b-1 border-stable p-l-5-10">
+          <h4>{{ covertDate(appointment.date) | date:'MMMM' }}</h4>
+        </div>
+        <div class="m-l-20-0 center-shadow">
+          <div class="bg-blue p-l-15-15 fs-14" [ngClass]="{
               'bg-blue': checkStatus(appointment.status, 0),
               'bg-green': checkStatus(appointment.status, 1),
               'bg-decline': checkStatus(appointment.status, 2)}">{{ covertDate(appointment.date) | date:'MMM dd' }}
-      </div>
-      <div (click)="navigate(appointment.id)" class="row row-center-v p-l-20-0 bg-stable-light hover-stable-light">
-        <div class="c-m-2 t-center"
-             [ngClass]="{
+          </div>
+          <div (click)="navigate(appointment.id)" class="row row-center-v p-l-20-0 bg-stable-light hover-stable-light">
+            <div class="c-m-2 t-center"
+                 [ngClass]="{
                  'color-blue': checkStatus(appointment.status, 0),
                  'color-green': checkStatus(appointment.status, 1),
                  'color-decline': checkStatus(appointment.status, 2)}">
@@ -40,41 +39,45 @@
                   'fa-calendar-check-o': checkStatus(appointment.status, 1),
                   'fa-calendar-times-o': checkStatus(appointment.status, 2)}">
               </span>
-          <p *ngIf="checkStatus(appointment.status, 0)" class="t-upper fs-12 m-l-10-0 m-top">Venter</p>
-          <p *ngIf="checkStatus(appointment.status, 1)" class="t-upper fs-12 m-l-10-0 m-top">Godkjent</p>
-          <p *ngIf="checkStatus(appointment.status, 2)" class="t-upper fs-12 m-l-10-0 m-top">Avslått</p>
-        </div>
-        <div class="c-m-10">
-          <h4>{{appointment.job.title}} for {{appointment.user.first_name}}</h4>
-          <p class="fs-12">Trykk for å se mer</p>
-          <div class="row p-l-20-0 p-top t-center">
-            <div class="c-m-4 fs-14">
-              <div class="row row-center-v">
-                <span class="fa fa-map-marker color-primary fs-14 m-l-0-10"></span>
-                <span class="color-stable-dark">Skansagata 2a</span>
-              </div>
+              <p *ngIf="checkStatus(appointment.status, 0)" class="t-upper fs-12 m-l-10-0 m-top">Venter</p>
+              <p *ngIf="checkStatus(appointment.status, 1)" class="t-upper fs-12 m-l-10-0 m-top">Godkjent</p>
+              <p *ngIf="checkStatus(appointment.status, 2)" class="t-upper fs-12 m-l-10-0 m-top">Avslått</p>
             </div>
-            <div class="c-m-4 fs-14">
-              <div class="row row-center-v">
-                <span class="fa fa-clock-o color-primary fs-14 m-l-0-10"></span>
+            <div class="c-m-10">
+              <h4>{{appointment.job.title}} for {{appointment.user.first_name}}</h4>
+              <p class="fs-12">Trykk for å se mer</p>
+              <div class="row p-l-20-0 p-top t-center">
+                <div class="c-m-4 fs-14">
+                  <div class="row row-center-v">
+                    <span class="fa fa-map-marker color-primary fs-14 m-l-0-10"></span>
+                    <span class="color-stable-dark">Skansagata 2a</span>
+                  </div>
+                </div>
+                <div class="c-m-4 fs-14">
+                  <div class="row row-center-v">
+                    <span class="fa fa-clock-o color-primary fs-14 m-l-0-10"></span>
                 <span class="color-stable-dark">{{appointment.job.duration}} time<span
                   *ngIf="appointment.job.duration > 1">r</span></span>
-              </div>
-            </div>
-            <div class="c-m-4 fs-14">
-              <div class="row row-center-v">
-                <span class="fa fa-user color-primary fs-14 m-l-0-10"></span>
-                <span class="color-stable-dark">{{appointment.user.first_name}} {{appointment.user.last_name}}</span>
+                  </div>
+                </div>
+                <div class="c-m-4 fs-14">
+                  <div class="row row-center-v">
+                    <span class="fa fa-user color-primary fs-14 m-l-0-10"></span>
+                    <span
+                      class="color-stable-dark">{{appointment.user.first_name}} {{appointment.user.last_name}}</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div *ngIf="!filteredAppointments.length" class="row row-center p-l-60-20">
-      <div class="w-900">
-        <h3>Ingen avtaler å vise</h3>
-        <p class="color-stable-dark fs-16">Det er ingen avtaler å vise til. Dette kan være fordi du ikke har oppført noen, eller at du har filtrert bort alle samen.</p>
+      <div *ngIf="!filteredAppointments.length" class="row row-center p-l-60-20">
+        <div class="w-900">
+          <h3>Ingen avtaler å vise</h3>
+          <p class="color-stable-dark fs-16">Det er ingen avtaler å vise til. Dette kan være fordi du ikke har oppført
+            noen, eller at du har filtrert bort alle samen.</p>
+        </div>
       </div>
     </div>
   </div>
