--- a/src/pages/front/home/home.component.html
+++ b/src/pages/front/home/home.component.html
@@ -15,6 +15,12 @@
         </p>
     </div>
 </div>
+<div class="row">
+  <h2>Halla broooo</h2>
+</div>
+<div class="row bg-stable-light border-t-1 border-stable p-l-20-60">
+
+</div>
 <smooth-alert [collapse]="show.alert"
               [alertType]="'warning'"
               [alertText]="'Mail sendt'"
