--- a/src/css/myappointments.component.css
+++ b/src/css/myappointments.component.css
@@ -9,7 +9,6 @@
   left: 0; }
 
 .appointment-list {
-  padding-top: 100px;
-  height: 100vh; }
+  padding-top: 100px; }
 
 /*# sourceMappingURL=myappointments.component.css.map */
