--- a/src/pages/front/front.component.html
+++ b/src/pages/front/front.component.html
@@ -1,22 +1,33 @@
 <div *ngIf="user" class="profile-section">
-  <div (click)="toggle('userProfile')" class="profile-picture"
-       [ngStyle]="{'background-image': 'url(' + baseUrl + user.user_profile.profile_picture_thumbnail + ')'}"></div>
-  <div *ngIf="show.userProfile" (click)="toggle('userProfile')" class="notefication-cover">
-    <div (click)="$event.stopPropagation()" class="notefication-dropdown p-l-20-10">
-      <div class="layout-row layout-center">
-        <div class="user-picture user-picture-lg" [ngStyle]="{'background-image': 'url(' + baseUrl + user.user_profile.profile_picture_thumbnail + ')'}">
-          <div class="edit-filter font-size-18 t-upper t-thin t-center" [ng-file-drop]="options">
-            <span>Endre bilde</span>
-            <input class="file-input" type="file" [ng-file-select]="options" (onUpload)="handleDropUpload($event)">
+  <div class="row row-center-v">
+    <button (click)="navigate('myjobs')" class=" btn-md btn-border-light rounded-3 fs-12 t-upper">Mine jobber</button>
+    <div (click)="toggle('userProfile')" class="profile-picture m-l-0-20"
+         [ngStyle]="{'background-image': 'url(' + baseUrl + user.profile_picture + ')'}"></div>
+    <div *ngIf="show.userProfile" (click)="toggle('userProfile')" class="notefication-cover">
+      <div (click)="$event.stopPropagation()" class="notefication-dropdown p-l-20-20">
+        <div class="row row-center">
+          <div class="picture picture-lg m-l-10-0"
+               [ngStyle]="{'background-image': 'url(' + baseUrl + user.profile_picture + ')'}">
+            <div class="edit-filter fs-14 t-upper t-thin t-center" [ng-file-drop]="options">
+              <span>Endre bilde</span>
+              <input class="file-input" type="file" [ng-file-select]="options" (onUpload)="handleDropUpload($event)">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="layout-row layout-center">
-        <h2>{{user.first_name}} {{ user.last_name }}</h2>
-        <button (click)="navigate('applications')" class="button-md button-positive w-100-p m-l-10-0">Mine søknader</button>
-        <button (click)="logout()" class="button-md button-action w-100-p m-l-10-0">Logg ut</button>
+        <div class="layout-row layout-center">
+          <h4>{{user.first_name}} {{ user.last_name }}</h4>
+          <button (click)="navigate('appointments')" class="btn-md btn-primary w-100-p m-l-5-0">Mine avtaler</button>
+          <button (click)="logout()" class="btn-md btn-blue w-100-p m-l-5-0">Logg ut</button>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<nav class="nav-md nav-fixed nav-center nav-center-v nav-blue center-shadow">
+  <div class="nav-logo"><img (click)="navigate('')" src="/img/logo/tidbanken_logo.png"
+                             alt=""></div>
+  <button (click)="navigate('post')" class="btn-md btn-border-light rounded-3 fs-12 m-l-0-10">Legg ut jobb</button>
+  <button (click)="navigate('jobs')" class="btn-md btn-border-light rounded-3 fs-12 m-l-0-10">Finn en jobb</button>
+</nav>
+<div class="has-nav-md"></div>
 <router-outlet></router-outlet>
