--- a/src/pages/front/register/register.component.html
+++ b/src/pages/front/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="c-l-6 bg-primary">
-        <div class="row row-center-v row-center h-full p-l-40-60">
+        <div class="row row-center-v row-center view-height p-l-40-60">
             <form [ngFormModel]="registerForm" (submit)="register()" class="fs-20 w-600">
                 <h4>Registrer deg</h4>
 
@@ -42,7 +42,7 @@
     </div>
     <div class="c-l-6 bg-image cover-9 cover-light"
          [ngStyle]="{'background-image':'url(http://memorymontage.homestead.com/files/MMgraphics/shape-collage-1.jpg)'}">
-        <div class="row row-center row-center-v cover-content h-full p-l-20-20">
+        <div class="row row-center row-center-v cover-content view-height p-l-20-20">
             <div class="w-600">
                 <h2 class="color-blue">
                     20 000 nordmenn er allerede med. <span class="color-primary">Bli en tidsparer i dag!</span>
