--- a/src/css/front.component.css
+++ b/src/css/front.component.css
@@ -13,10 +13,13 @@
   KORDE - PLACEHOLDERS
 
 -----------------------------------------*/
-.picture-sm, .picture-md, .picture-lg {
+.picture-sm, .picture-md, .picture-lg, .profile-section .profile-picture {
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%; }
+
+.view-height {
+  height: calc(100vh - 80px); }
 
 .picture {
   position: relative;
@@ -67,5 +70,80 @@
 .picture-lg {
   width: 150px;
   height: 150px; }
+
+.profile-section {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 10px 20px;
+  z-index: 1339; }
+  .profile-section .notefication-cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    -webkit-animation: fade-in 1000ms 1;
+    /* Chrome, Safari, Opera */
+    animation: fade-in 1000ms 1; }
+    .profile-section .notefication-cover .notefication-dropdown {
+      position: absolute;
+      top: 20px;
+      right: 100px;
+      width: 300px;
+      max-height: 400px;
+      background: #fff;
+      margin: 0 20px;
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+      overflow-y: scroll;
+      -webkit-animation: open-width 500ms 1;
+      /* Chrome, Safari, Opera */
+      animation: open-width 500ms 1; }
+      .profile-section .notefication-cover .notefication-dropdown .notefication-header {
+        width: 300px;
+        background: #4c7c96;
+        padding: 10px 20px; }
+      .profile-section .notefication-cover .notefication-dropdown .notefication-list {
+        width: 300px;
+        overflow: scroll; }
+        .profile-section .notefication-cover .notefication-dropdown .notefication-list .list-item {
+          width: 100%;
+          padding: 10px 15px;
+          border-bottom: 1px solid #d7d9da; }
+  .profile-section .profile-picture {
+    position: relative;
+    background-position: center center;
+    background-size: cover;
+    border: 2px solid #fff;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    width: 60px;
+    height: 60px; }
+    .profile-section .profile-picture span {
+      position: absolute;
+      top: 0;
+      left: -20px;
+      width: 20px;
+      height: 20px;
+      background: #c0392b;
+      border-radius: 100%;
+      line-height: 20px;
+      color: #fff; }
+
+@-webkit-keyframes open-width {
+  0% {
+    right: 0;
+    width: 0px; }
+  100% {
+    right: 100px;
+    width: 300px; } }
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=front.component.css.map */
