--- a/src/css/post.component.css
+++ b/src/css/post.component.css
@@ -3,6 +3,14 @@
   KORDE - VARIABLES
 
 -----------------------------------------*/
+.tag {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px;
+  background: #fc797c;
+  border-radius: 1337px;
+  color: #fff; }
+
 .prog-list {
   width: 100%;
   position: absolute;
