--- a/src/pages/front/appointment/appointment.component.html
+++ b/src/pages/front/appointment/appointment.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="appointment" class="row">
-  <div class="w-600 h-full bg-stable-light">
-    <div class="row row-center row-center-v h-400" [ngClass]="{
+  <div class="w-600 view-height overflow-scroll bg-stable-light">
+    <div class="row row-center row-center-v h-300" [ngClass]="{
               'bg-blue': checkStatus(appointment.status, 0),
               'bg-green': checkStatus(appointment.status, 1),
               'bg-decline': checkStatus(appointment.status, 2)}">
@@ -8,8 +8,8 @@
         <div class="p-l-20-20 t-center">
               <span class="fa fs-40" [ngClass]="{
                   'fa-hourglass-o': checkStatus(appointment.status, 0),
-                  'fa-calendar-check-o': checkStatus(appointment.status, 1),
-                  'fa-calendar-times-o': checkStatus(appointment.status, 2)}">
+                  'fa-check': checkStatus(appointment.status, 1),
+                  'fa-times': checkStatus(appointment.status, 2)}">
               </span>
           <p *ngIf="checkStatus(appointment.status, 0)" class="t-upper fs-12 m-l-10-0 m-top">Venter</p>
           <p *ngIf="checkStatus(appointment.status, 1)" class="t-upper fs-12 m-l-10-0 m-top">Godkjent</p>
@@ -21,46 +21,71 @@
       <div class="p-l-15-15 fs-16 t-center" [ngClass]="{
               'bg-blue': checkStatus(appointment.status, 0),
               'bg-green': checkStatus(appointment.status, 1),
-              'bg-decline': checkStatus(appointment.status, 2)}"><strong>{{appointment.job.title}}</strong> den {{
-        covertDate(appointment.date) | date:'longDate' }}
+              'bg-decline': checkStatus(appointment.status, 2)}">
+        <h5>{{appointment.job.title}}</h5>
+        {{ covertDate(appointment.date) | date:'longDate' }}
       </div>
       <div class="row bg-stable-light">
         <div class="c-l-12 fs-14">
-          <div class="row row-center-v border-b-1 border-stable p-l-20-20">
+          <div class="row row-center-v hover-stable-light border-b-1 border-stable p-l-20-20">
             <span class="fa fa-map-marker color-primary fs-14 m-l-0-10"></span>
             <span class="color-stable-dark">Skansagata 2a</span>
           </div>
-          <div class="row row-center-v border-b-1 border-stable p-l-20-20">
+          <div class="row row-center-v hover-stable-light border-b-1 border-stable p-l-20-20">
             <span class="fa fa-clock-o color-primary fs-14 m-l-0-10"></span>
             <span class="color-stable-dark">{{appointment.job.duration}} time<span
               *ngIf="appointment.job.duration > 1">r</span></span>
           </div>
-          <div class="row row-center-v border-b-1 border-stable p-l-20-20">
-            <span class="fa fa-user color-primary fs-14 m-l-0-10"></span>
-            <span class="color-stable-dark">{{appointment.user.first_name}} {{appointment.user.last_name}}</span>
+          <div (click)="toUser(appointment.user.id)" class="row row-center-v hover-stable-light border-b-1 border-stable p-l-20-20">
+            <div class="picture picture-md m-l-0-10"
+                 [ngStyle]="{'background-image':'url(' + baseUrl + appointment.user.profile_picture + ')'}"></div>
+            <div class="m-l-0-10 fs-12">
+              <p class="color-dark m-l-0-0">{{appointment.user.first_name}} {{appointment.user.last_name}}</p>
+              <span class="fa fa-star color-primary"></span>
+              <span class="fa fa-star color-primary"></span>
+              <span class="fa fa-star color-primary"></span>
+              <span class="fa fa-star color-primary"></span>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div *ngIf="checkStatus(appointment.status, 1)" class="row row-center row-center-v p-l-60-20 fs-14">
       <div class="t-center p-l-0-20">
-        <p>Ble avtalen gjennomført? Ikke glem å marker avtalen som gjennomført, slik at {{appointment.user.first_name}} får timene sine.</p>
+        <p>Ble avtalen gjennomført? Ikke glem å marker avtalen som gjennomført, slik at {{appointment.user.first_name}}
+          får timene sine.</p>
       </div>
-      <button (click)="sendMessage('Halla')" class="btn-lg btn-green rounded-3 m-l-20-0 m-top">Avtalen ble gjennomført</button>
+      <button (click)="toggle('rating')" class="btn-lg btn-green rounded-3 m-l-20-0 m-top">Avtalen ble gjennomført
+      </button>
+    </div>
+    <div *ngIf="messages.length && checkStatus(appointment.status, 0)" class="p-l-20-20 bg-stable-light fs-12">
+      <h6>Gi et svar</h6>
+      <p class="color-stable-dark">Du har ikke gitt svar til {{appointment.user.first_name}} om denne tiden passer for deg. Dette kan du gjøre ved å trykke på knappene under</p>
+      <div class="t-center">
+        <button (click)="decline()" class="btn-md btn-primary btn-round m-l-15-10 m-top">Avslå</button>
+        <button (click)="accept()" class="btn-md btn-green btn-round m-l-15-10 m-top">Godta</button>
+      </div>
+    </div>
+    <div *ngIf="checkStatus(appointment.status, 2)" class="p-l-20-20 bg-stable-light fs-12">
+      <h6>Endret mening?</h6>
+      <p class="color-stable-dark">Hvis du har endret mening angående denne avtalen kan du godkjenne den ved å trykke på knappen under.</p>
+      <div class="t-center">
+        <button (click)="accept()" class="btn-md btn-green btn-round m-l-15-10 m-top">Godta avtale alikevel</button>
+      </div>
     </div>
   </div>
-  <div class="chat-room fs-14">
+  <div class="chat-room view-height fs-14">
     <div class="messages" #chatScroll>
-      <div *ngIf="checkStatus(appointment.status, 0)" class="row row-center row-center-v h-100-p p-l-40-20 t-center">
+      <div *ngIf="checkStatus(appointment.status, 0) && !messages.length" class="row row-center row-center-v h-100-p p-l-40-20 t-center">
         <div class="w-600">
           <h3>Gi et svar</h3>
           <p class="fs-14 color-stable-dark">Du har ikke gitt svar til {{appointment.user.first_name}} om denne tiden passer for deg. Dette kan du gjøre ved å trykke på knappene under</p>
-          <!--<div class="picture picture-lg" [ngStyle]="{'background-image':'url(' + baseUrl + appointment.user.profile_picture + ')'}"></div>-->
           <button (click)="decline()" class="btn-lg btn-primary btn-round m-l-40-20">Avslå</button>
           <button (click)="accept()" class="btn-lg btn-green btn-round m-l-40-20">Godta</button>
         </div>
       </div>
-      <div *ngIf="!checkStatus(appointment.status, 0) && !messages.length" class="row row-center row-center-v h-100-p p-l-40-20 t-center">
+      <div *ngIf="!checkStatus(appointment.status, 0) && !messages.length"
+           class="row row-center row-center-v h-100-p p-l-40-20 t-center">
         <div class="w-600">
           <h4>Ingen meldinger</h4>
           <p class="fs-14 color-stable-dark">Du og {{appointment.user.first_name}} har ingen meldinger sammen enda. For å skrive en melding vennligst benytt feltet under.</p>
@@ -78,6 +103,60 @@
              [innerHtml]="msg.text"></div>
       </div>
     </div>
-    <textarea [(ngModel)]="newMessage" (keypress)="checkPress($event, newMessage)" class="textarea" placeholder="Skriv din melding her ..."></textarea>
+    <textarea [(ngModel)]="newMessage" (keypress)="checkPress($event, newMessage)" class="textarea"
+              placeholder="Skriv din melding her ..."></textarea>
+  </div>
+</div>
+
+<div *ngIf="show.payment" (click)="toggle('payment')"
+     class="dialog-cover row row-center row-center-v cover-6 cover-black">
+  <div (click)="$event.stopPropagation()" class="popup-dialog w-600 bg-light p-l-20-20 rounded-5">
+    <div class="row p-l-5-0">
+      <div class="c-l-12 t-center">
+        <h4 class="t-upper t-300 color-stable-dark">Endre antall timer</h4>
+        <div class="number-picker row row-center row-center-v p-l-20-0">
+          <div class="c-m-4 c-s-6 p-l-0-10">
+            <input type="text" [(ngModel)]="hours">
+          </div>
+          <div class="c-m-4 c-s-6 fs-24 p-l-0-10">
+            <button (click)="changeHour(true)" class="btn-sm btn-border-primary w-100-p"><span
+              class="fa fa-caret-up"></span></button>
+            <div class="h-10"></div>
+            <button (click)="changeHour(false)" class="btn-sm btn-border-primary w-100-p"><span
+              class="fa fa-caret-down"></span></button>
+          </div>
+        </div>
+        <p class="color-stable-dark fs-14 m-l-20-0">Du har ingen timer til gode og må derfor kjøpe timene for denne
+          jobben. Det koster 50kr per time.</p>
+        <button (click)="toggle('payment')" class="btn-md btn-border-stable-dark btn-round fs-14 m-l-10-10">Tilbake
+        </button>
+        <button (click)="openCheckout()" class="btn-md btn-green btn-round fs-14 m-l-10-10">Gå til betaling</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="show.rating" (click)="toggle('rating')"
+     class="dialog-cover row row-center row-center-v cover-6 cover-black">
+  <div (click)="$event.stopPropagation()" class="popup-dialog w-600 bg-light p-l-20-20 rounded-5">
+    <div class="row p-l-5-15">
+      <div *ngIf="!rating.stars" class="c-l-12 t-center">
+        <h4 class="t-300 color-stable-dark">Gi din vurdering av {{appointment.user.first_name}}</h4>
+        <ul class="rating-stars fs-40">
+          <li (click)="setRating(1)"><span class="fa fa-star" aria-hidden="true"></span></li>
+          <li (click)="setRating(2)"><span class="fa fa-star" aria-hidden="true"></span></li>
+          <li (click)="setRating(3)"><span class="fa fa-star" aria-hidden="true"></span></li>
+          <li (click)="setRating(4)"><span class="fa fa-star" aria-hidden="true"></span></li>
+          <li (click)="setRating(5)"><span class="fa fa-star" aria-hidden="true"></span></li>
+        </ul>
+      </div>
+      <div *ngIf="rating.stars" class="c-l-12">
+        <h4 class="t-300 t-center color-stable-dark">Skriv gjerne en kort kommentar også</h4>
+        <textarea class="textarea h-200 fs-14 m-l-10-0" placeholder="Skriv din kommentar her..."></textarea>
+        <div class="t-right">
+          <button class="btn-md btn-primary rounded-3 fs-14">Send inn</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
