--- a/src/pages/front/myappointments/myappointments.component.html
+++ b/src/pages/front/myappointments/myappointments.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-  <div class="c-m-4 bg-stable-light center-shadow">
-    <div class="row h-full">
+<div class="row view-height">
+  <div class="c-m-4 bg-light border-r-1 border-stable center-shadow">
+    <div class="row view-height">
       <div class="p-l-20-20">
         <div class="row p-l-10-10 bg-blue">Den kommende uken</div>
       </div>
@@ -8,12 +8,7 @@
                   (valueChange)="addDate($event)" [height]="350"></datepicker>
     </div>
   </div>
-  <div class="c-l-8">
-    <div class="appointment-header row row-center-v row-center h-100 bg-primary">
-      <h4>Kommende avtaler</h4>
-    </div>
-    <div class="appointment-list">
+  <div class="c-l-8 view-height">
       <appointment-list *ngIf="filteredAppointments" [appointments]="filteredAppointments"></appointment-list>
-    </div>
   </div>
 </div>
