--- a/src/pages/front/post/post.component.html
+++ b/src/pages/front/post/post.component.html
@@ -1,56 +1,83 @@
-<div class="row row-center row-center-v h-full bg-stable-light fs-14 p-l-0-20">
-    <form [ngFormModel]="jobForm" (ngSubmit)="postJob()">
-        <div *ngIf="checkStep(0)" class="w-700">
-            <h4>Tittel</h4>
-            <input ngControl="title" [(ngModel)]="newJob.title" type="text" class="input h-60"
-                   placeholder="Skriv inn en passende tittel" #title="ngForm">
-            <div class="m-l-10-0 t-right">
-                <button (click)="next()" [disabled]="!title.valid" type="button" class="btn-lg btn-primary">Neste</button>
-            </div>
-        </div>
-        <div *ngIf="checkStep(1)" class="w-700">
-            <h4>Beskrivelse</h4>
+<div class="row row-center row-center-v view-height bg-stable-light fs-14 p-l-0-20">
+  <form [ngFormModel]="jobForm" (ngSubmit)="postJob()">
+    <div *ngIf="checkStep(0)" class="w-700">
+      <h4>Tittel</h4>
+      <input ngControl="title" [(ngModel)]="newJob.title" type="text" class="input h-60"
+             placeholder="Skriv inn en passende tittel" #title="ngForm">
+      <div class="m-l-10-0 t-right">
+        <button (click)="next()" [disabled]="!title.valid" type="button" class="btn-lg btn-primary">Neste</button>
+      </div>
+    </div>
+    <div *ngIf="checkStep(1)" class="w-700">
+      <h4>Beskrivelse</h4>
             <textarea ngControl="description" [(ngModel)]="newJob.description" class="textarea h-300"
                       placeholder="Skriv en kort beskrivelse" #description="ngForm"></textarea>
-            <div class="m-l-10-0 t-right">
-                <button (click)="next()" [disabled]="!description.valid" type="button" class="btn-lg btn-primary">Neste</button>
-            </div>
-        </div>
-        <div *ngIf="checkStep(2)" class="w-1100">
-            <h4 class="w-100-p">Hvor lang tid tar det?</h4>
-            <div class="row row-center-v row-center">
-                <div *ngFor="let hour of hours" (click)="setDuration(hour)" class="border-1 border-stable-dark p-l-10-10 bg-light w-200 t-center m-l-10-10 hover-light">
-                    <p class="m-l-0-0">Omtrent</p>
-                    <h3 class="m-l-0-0">{{hour}}</h3>
-                    <p *ngIf="hour == 1" class="m-l-0-0">time</p>
-                    <p *ngIf="hour != 1" class="m-l-0-0">timer</p>
-                </div>
-                <div class="p-l-10-10 w-200 t-center m-l-10-10">
-                    <p class="m-l-10-0">Omtrent</p>
-                    <input ngControl="duration" [(ngModel)]="newJob.duration" type="number" class="input h-50 t-center"
-                           #duration="ngForm">
-                    <p class="m-l-10-0">timer</p>
-                </div>
-                <div class="m-l-10-0 w-100-p t-right">
-                    <button (click)="next()" [disabled]="!duration.valid" type="button" class="btn-lg btn-primary m-l-20-20">Neste</button>
-                </div>
-            </div>
-        </div>
-        <div *ngIf="checkStep(3)" class="w-700">
-            <h4>Adresse</h4>
-            <input ngControl="street_address" [(ngModel)]="newJob.street_address" (setAddress) = "getAddress($event)" class="input h-60"
-                   placeholder="Skriv inn din adresse" #street_address="ngForm" googleplace>
-            <div class="m-l-10-0 t-right">
-                <button [disabled]="!street_address.valid" type="submit" class="btn-lg btn-primary">Neste</button>
-            </div>
-        </div>
-    </form>
-    <div class="prog-list">
-        <ul>
-            <li (click)="setStep(0)" [ngClass]="{'active': checkStep(0)}">1</li>
-            <li (click)="setStep(1)" [ngClass]="{'active': checkStep(1)}">2</li>
-            <li (click)="setStep(2)" [ngClass]="{'active': checkStep(2)}">3</li>
-            <li (click)="setStep(3)" [ngClass]="{'active': checkStep(3)}">4</li>
-        </ul>
+      <div class="m-l-10-0 t-right">
+        <button (click)="next()" [disabled]="!description.valid" type="button" class="btn-lg btn-primary">Neste</button>
+      </div>
     </div>
+    <div *ngIf="checkStep(2)" class="w-1100">
+      <h4 class="w-100-p">Hvor lang tid tar det?</h4>
+      <div class="row row-center-v row-center">
+        <div *ngFor="let hour of hours" (click)="setDuration(hour)"
+             class="border-1 border-stable-dark p-l-10-10 bg-light w-200 t-center m-l-10-10 hover-light">
+          <p class="m-l-0-0">Omtrent</p>
+          <h3 class="m-l-0-0">{{hour}}</h3>
+          <p *ngIf="hour == 1" class="m-l-0-0">time</p>
+          <p *ngIf="hour != 1" class="m-l-0-0">timer</p>
+        </div>
+        <div class="p-l-10-10 w-200 t-center m-l-10-10">
+          <p class="m-l-10-0">Omtrent</p>
+          <input ngControl="duration" [(ngModel)]="newJob.duration" type="number" class="input h-50 t-center"
+                 #duration="ngForm">
+          <p class="m-l-10-0">timer</p>
+        </div>
+        <div class="m-l-10-0 w-100-p t-right">
+          <button (click)="next()" [disabled]="!duration.valid" type="button" class="btn-lg btn-primary m-l-20-20">
+            Neste
+          </button>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="checkStep(3)" class="w-700">
+      <h4>Adresse</h4>
+      <div class="row">
+        <div class="c-m-6">
+          <input ngControl="street_address" [(ngModel)]="newJob.street_address" class="input h-60"
+                 placeholder="Skriv inn din adresse" #street_address="ngForm">
+        </div>
+        <div class="c-m-3">
+          <input ngControl="city" [(ngModel)]="newJob.city" class="input h-60" placeholder="By" #city="ngForm">
+        </div>
+        <div class="c-m-3">
+          <input ngControl="postal_code" [(ngModel)]="newJob.postal_code" class="input h-60" placeholder="Postnr." #postal_code="ngForm">
+        </div>
+      </div>
+      <div class="m-l-10-0 t-right">
+        <button (click)="next()" [disabled]="!street_address.valid || !city.valid || !postal_code.valid" type="button" class="btn-lg btn-primary">Neste
+        </button>
+      </div>
+    </div>
+    <div *ngIf="checkStep(4)" class="w-700">
+      <h4>Tags</h4>
+      <input (keypress)="checkPress($event, tagString)" [(ngModel)]="tagString" class="input h-60"
+             placeholder="Skriv inn tags">
+      <div *ngFor="let tag of newJob.tags" class="tag hover-primary">
+        <span (click)="removeTag(tag)" class="fa fa-times m-l-0-10 m-right"></span>
+        <span class="m-l-0-10 m-right">{{ tag }}</span>
+      </div>
+      <div class="m-l-10-0 t-right">
+        <button type="submit" class="btn-lg btn-primary">Legg ut jobben</button>
+      </div>
+    </div>
+  </form>
+  <div class="prog-list">
+    <ul>
+      <li (click)="setStep(0)" [ngClass]="{'active': checkStep(0)}">1</li>
+      <li (click)="setStep(1)" [ngClass]="{'active': checkStep(1)}">2</li>
+      <li (click)="setStep(2)" [ngClass]="{'active': checkStep(2)}">3</li>
+      <li (click)="setStep(3)" [ngClass]="{'active': checkStep(3)}">4</li>
+      <li (click)="setStep(4)" [ngClass]="{'active': checkStep(4)}">5</li>
+    </ul>
+  </div>
 </div>
