--- a/src/pages/front/post/post.component.scss
+++ b/src/pages/front/post/post.component.scss
@@ -6,6 +6,18 @@
 $bulletpointSize: 4em;
 $borderWidth: 0.1em;
 
+
+// Job tags
+// ------------------------
+.tag {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px;
+  background: $primary;
+  border-radius: 1337px;
+  color: $light;
+}
+
 .prog-list {
   width: 100%;
   position: absolute;
@@ -43,7 +55,6 @@ $borderWidth: 0.1em;
     background: $primary;
     z-index: -1;
   }
-
 
   li:first-child::before {
     display: none;
