--- a/src/pages/front/jobs/jobs.component.html
+++ b/src/pages/front/jobs/jobs.component.html
@@ -51,7 +51,7 @@
           <span>Kart</span>
         </button>
     </div>
-    <div class="row row-center p-l-20-20 p-bottom">
+    <div class="row row-center p-l-20-20 p-bottom overflow-scroll">
 
         <!-- List view -->
         <div *ngIf="!show.map" class="w-1000">
