--- a/src/css/jobs.component.css
+++ b/src/css/jobs.component.css
@@ -12,7 +12,7 @@
 
 .job-map {
   width: 100%;
-  height: 1000px; }
+  height: calc(100% - 120px); }
   .job-map .sebm-google-map-container {
     width: 100%;
     height: 100%; }
