--- a/src/pages/front/jobs/jobs.component.scss
+++ b/src/pages/front/jobs/jobs.component.scss
@@ -19,7 +19,7 @@ $barWidth: 400px;
 
 .job-map {
   width: 100%;
-  height: 1000px;
+  height: calc(100% - 120px);
 
   .sebm-google-map-container {
     width: 100%;
